--- a/index.html
+++ b/index.html
@@ -491,6 +491,11 @@
                 the unauthorized copying or distribution of copyrighted material, nor do we assume responsibility for any
                 misuse of the tools or any consequences arising from such misuse.
             </p>
+            <div class="mt-2 text-sm">
+                <a href="/privacy.html" class="text-blue-300 hover:text-blue-100 transition duration-300">Privacy Policy</a>
+                <span class="mx-2">|</span>
+                <a href="/terms.html" class="text-blue-300 hover:text-blue-100 transition duration-300">Terms and Conditions</a>
+            </div>
         </div>
     </footer>
 
