--- a/privacy.html
+++ b/privacy.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,16 +8,17 @@
     <style>
         body { font-family: 'Inter', sans-serif; background-color: #f0f4f8; color: #334155; min-height: 100vh; display: flex; flex-direction: column; }
         .container { max-width: 800px; margin: 0 auto; padding: 2rem; }
-        h1 { font-size: 2.5rem; font-weight: bold; margin-bottom: 1rem; color: #1e3a8a; }
-        h2 { font-size: 1.8rem; font-weight: bold; margin-top: 1.5rem; margin-bottom: 0.8rem; color: #2563eb; }
+        h1 { font-size: 2.5rem; font-weight: bold; margin-bottom: 1rem; color: #1e3a8a; } /* Dark blue */
+        h2 { font-size: 1.8rem; font-weight: bold; margin-top: 1.5rem; margin-bottom: 0.8rem; color: #2563eb; } /* Medium blue */
         p, ul, ol { margin-bottom: 1rem; line-height: 1.6; }
         ul, ol { padding-left: 1.5rem; }
         a { color: #3b82f6; text-decoration: underline; }
+        /* Dark Mode Styles */
         @media (prefers-color-scheme: dark) {
             body { background-color: #1a202c; color: #e2e8f0; }
             .container { background-color: #2d3748; }
-            h1 { color: #93c5fd; }
-            h2 { color: #60a5fa; }
+            h1 { color: #93c5fd; } /* Light blue */
+            h2 { color: #60a5fa; } /* Medium light blue */
             a { color: #60a5fa; }
         }
     </style>
